Fix video jump

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,8 +281,9 @@ nav ul li a:hover {
 	overflow: hidden;
 	box-shadow: 0 10px 40px rgba(0,0,0,0.1);
 	background: #000;
-	transform: translateZ(0);
-	-webkit-transform: translateZ(0);
+	contain: layout style paint;
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
 }
 
 .video-container video {
